<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cit_1"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                >

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="127dp"
                    android:layout_height="122dp"
                    android:src="@drawable/icon2"
                    android:contentDescription="@string/logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/subtitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/form_subtitle"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/welcomeText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/user_icon"
                    android:hint="@string/username"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/subtitleText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/password_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/login_btn"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_rounded"
                    app:backgroundTint="#7B1113"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Register Links -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    tools:layout_editor_absoluteX="20dp"
                    android:gravity="center"
                    android:layout_marginTop="14dp">

                    <TextView
                        android:id="@+id/registerText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/register_link2"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/registerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:text="@string/register_link"
                        android:textColor="@color/maroon"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>