<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cit_1"
    android:id="@+id/register"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="414dp"
        android:layout_height="730dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:background="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <!-- Nested ConstraintLayout inside CardView -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="656dp"
                android:padding="20dp">


                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_link1"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/loginText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/login_link2"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:textColor="@color/maroon"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.15"
                    app:layout_constraintStart_toEndOf="@+id/loginText"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="127dp"
                    android:layout_height="122dp"
                    android:src="@drawable/icon2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Welcome Text -->

                <!-- Username Input -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_account"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logo" />


                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/username_icon"
                    android:hint="@string/username"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeText"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/user_icon"
                    android:hint="@string/fn"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/user_icon"
                    android:hint="@string/ln"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstname"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/address_icon"
                    android:hint="@string/add"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastname"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/contactno"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/contact_icon"
                    android:hint="@string/cn"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/email_icon"
                    android:hint="@string/email"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/fill_rounded"
                    android:drawableStart="@drawable/password_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactno"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_rounded"
                    android:text="@string/register_btn"
                    android:textColor="@android:color/white"
                    app:backgroundTint="#7B1113"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
